--- a/src/Utils/base.scss
+++ b/src/Utils/base.scss
@@ -52,9 +52,21 @@ img {
   padding-bottom: 20px;
   padding-left: 16px;
 
+   background-image: url(../../assets/img/10602120_42180-last.png);
+    
+  background-size: cover, cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
   
-//   min-height: 1500px;
-  background-color: #D0CFCF;
+
+ 
+
+   min-height: 100vh;
+   max-width: 100;
+  background-color: rgba(255, 255, 255, 0.8);
+  position: relative;
+  z-index: 2;
 
   @media screen and (min-width: 768px) {
     box-sizing: border-box;
@@ -63,15 +75,12 @@ img {
     padding-right: 32px;
   }
 
-  @media screen and (min-width: 1024px) {
-    // box-sizing: border-box;
-    max-width: 1024px;
-    padding-left: 60px;
-    padding-right: 60px;
+  @media screen and (min-width: 1440px) {
+    
+    min-width: 1440px;
+    padding-left: 40px;
+    padding-right: 40px;
+
   }
-    @media screen and (min-width: 2560px) {
-    // box-sizing: border-box;
-    max-width: 2560px;
- 
-  }
+  
 }
